[package]
name          = "pholib"
description   = "Potentially helpful objects that break the rules of the borrow checker, because why not."
version       = "1.0.0"
authors       = ["Totobird Creations"]
keywords      = ["unsafe", "mut", "library"]
categories    = ["algorithms"]

homepage      = "https://crates.io/crates/pholib"
documentation = "https://docs.rs/pholib"
repository    = "https://github.com/Totobird-Creations/Rust-PhoLib"
readme        = "README.md"
license       = "MIT"

edition       = "2021"
